--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
     />
-    <head 
+    <meta 
       http-equiv="Content-Security-Policy" 
       content="upgrade-insecure-requests" />
     
